tests/parser/assert-statement-not-terminated.stderr
error: expected ';'
 --> $DIR/assert-statement-not-terminated.lox:1:13
  |
1 | assert true _
  |             ^
